# SnowAngel-UAV

./: .gitignore  README.md  docker-compose.yml  mk  start.sh
board/: .clang-format  CMakeLists.txt  README.md  mk
board/include/bsp/: fmcw_radar_sensor.hpp  foo.h  gps.hpp  sensor.hpp  start_switch.hpp  temperature_sensor.hpp
board/include/common/: common.h  logging.h
board/scripts/: ops_serial.py  plot_fft.py  radar_data.json  thickness_analyzer.py
board/sim/: radar_ice_fft_data.sim
board/src/app/: board_fsm.c  board_fsm.cpp  board_fsm.h  board_fsm.hpp  logging.c  logging.h  main.c  main.cpp
board/src/bsp/: adafruit_tm117.cpp  adafruit_tm117.hpp  adafruit_ultimate_gps_pa1616d.cpp  adafruit_ultimate_gps_pa1616d.hpp  foo.c  ops_fmcw.cpp  ops_fmcw.hpp  whatever_switch.cpp  whatever_switch.hpp
board/src/common/: logging.c
board/unittest/: test_adafruit_tm117.cpp  test_ops_fmcw.cpp
webapp/backend/: Dockerfile  plot_measurements.py  requirements.txt  server.py  snow_angel_uav_converted.csv  snow_angel_uav_raw.csv  snow_angel_uav_raw_fake_2.csv  snow_angel_uav_raw_fake_canal_segment.csv  snow_angel_uav_raw_fake_canal_segment_dense_2026-01-18.csv  snow_angel_uav_raw_fake_dense.csv  temp_server.py  test_upload.py
webapp/backend/scripts/: seed_actual_data.py  seed_dummy_data.py
webapp/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
webapp/frontend/src/: App.tsx  styles.css
webapp/frontend/src/components/: Header.tsx  HeatMap.tsx  UploadModal.tsx
webapp/frontend/src/hooks/: useHeatmapData.ts
